--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <form action="loginServlet">
-            enter your name:  <input type="text" name="name"><br>
-               enter your password:  <input type="text" name="password"><br>
-               enter your email: <input type="email" name="email"><br>
-               enter your address: <input type="text"name="address"><br>
-           <input type="submit" value="login">
-        <div>TODO write content</div>
-        </form> 
-    </body>
+        <form action="Newservlet3">
+
+    <input type="text" name="name" placeholder="enter your name"><br>
+    <input type="text" name="pass" placeholder="enter your password"><br>
+    <input type="submit" value="login"><br>
+        </form>
+        </body>
 </html>
