--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <form action="Newservlet3">
-
-    <input type="text" name="name" placeholder="enter your name"><br>
-    <input type="text" name="pass" placeholder="enter your password"><br>
-    <input type="submit" value="login"><br>
+        <form action="process.jsp">
+            <input type="text" name="t1"><br>
+            <input type="text" name="t2"><br>
+            <input type="submit">
         </form>
-        </body>
+    </body>
 </html>
